--- a/Lab10.runs/impl_1/usage_statistics_webtalk.html
+++ b/Lab10.runs/impl_1/usage_statistics_webtalk.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>Device Usage Page (usage_statistics_webtalk.html)</H3>This HTML page displays the device usage statistics that will be sent to Xilinx.<BR>To see the actual file transmitted to Xilinx, please click <A HREF="./usage_statistics_webtalk.xml">here</A>.<BR><BR><HR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Nov 13 13:08:29 2015</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Nov 13 13:55:13 2015</TD>
   <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2015.1 (64-bit)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1215546</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
@@ -56,21 +56,21 @@
     <TD>bufgctrl=4</TD>
     <TD>carry4=19</TD>
     <TD>fdre=57</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=7</TD>
     <TD>ibuf=1</TD>
     <TD>lut1=36</TD>
-    <TD>lut2=31</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=52</TD>
-    <TD>lut4=48</TD>
-    <TD>lut5=220</TD>
-    <TD>lut6=449</TD>
+    <TD>lut2=33</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=54</TD>
+    <TD>lut4=77</TD>
+    <TD>lut5=236</TD>
+    <TD>lut6=431</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
     <TD>muxf7=2</TD>
     <TD>obuf=14</TD>
-    <TD>ram128x1s=2</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ram256x1s=8</TD>
-    <TD>ram32m=12</TD>
-    <TD>ram32x1s=36</TD>
+    <TD>ram128x1d=18</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ram32m=12</TD>
+    <TD>ram32x1d=4</TD>
+    <TD>ram32x1s=32</TD>
     <TD>vcc=4</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -81,21 +81,20 @@
     <TD>bufgctrl=4</TD>
     <TD>carry4=19</TD>
     <TD>fdre=57</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=7</TD>
     <TD>ibuf=1</TD>
     <TD>lut1=36</TD>
-    <TD>lut2=31</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut3=52</TD>
-    <TD>lut4=48</TD>
-    <TD>lut5=220</TD>
-    <TD>lut6=449</TD>
+    <TD>lut2=33</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3=54</TD>
+    <TD>lut4=77</TD>
+    <TD>lut5=236</TD>
+    <TD>lut6=431</TD>
 </TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv=1</TD>
-    <TD>muxf7=20</TD>
-    <TD>muxf8=8</TD>
+    <TD>muxf7=38</TD>
     <TD>obuf=14</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ramd32=72</TD>
-    <TD>rams32=60</TD>
-    <TD>rams64e=36</TD>
+    <TD>ramd32=80</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ramd64e=72</TD>
+    <TD>rams32=56</TD>
     <TD>vcc=4</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -105,26 +104,26 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>lut=846</TD>
+<TR ALIGN='LEFT'>    <TD>lut=887</TD>
     <TD>ff=57</TD>
     <TD>bram36=0</TD>
     <TD>bram18=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ctrls=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ctrls=19</TD>
     <TD>dsp=0</TD>
     <TD>iob=15</TD>
     <TD>bufg=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=3</TD>
     <TD>pll=0</TD>
     <TD>bufr=0</TD>
-    <TD>nets=1176</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1106</TD>
-    <TD>pins=7853</TD>
+    <TD>nets=1256</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1186</TD>
+    <TD>pins=8961</TD>
     <TD>bogomips=3591</TD>
     <TD>effort=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>threads=4</TD>
     <TD>placer_timing_driven=1</TD>
     <TD>timing_constraints_exist=1</TD>
-    <TD>placer_runtime=14.210000</TD>
+    <TD>placer_runtime=23.350000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -162,7 +161,7 @@
     <TD>process=typical</TD>
     <TD>simulation_file=None</TD>
 </TR><TR ALIGN='LEFT'>    <TD>netlist_net_matched=NA</TD>
-    <TD>pct_clock_constrained=1.150000</TD>
+    <TD>pct_clock_constrained=1.110000</TD>
     <TD>pct_inputs_defined=100</TD>
     <TD>user_junc_temp=26.0 (C)</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ambient_temp=25.0 (C)</TD>
@@ -191,29 +190,29 @@
     <TD>signal_rate=False</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
     <TD>read_saif=False</TD>
-    <TD>on-chip_power=0.210697</TD>
-    <TD>dynamic=0.113277</TD>
+    <TD>on-chip_power=0.211948</TD>
+    <TD>dynamic=0.114523</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effective_thetaja=4.6</TD>
     <TD>thetasa=4.6 (C/W)</TD>
     <TD>thetajb=5.7 (C/W)</TD>
     <TD>off-chip_power=0.000000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>clocks=0.007395</TD>
-    <TD>logic=0.002264</TD>
-    <TD>signals=0.002429</TD>
+</TR><TR ALIGN='LEFT'>    <TD>clocks=0.007673</TD>
+    <TD>logic=0.002201</TD>
+    <TD>signals=0.003397</TD>
     <TD>mmcm=0.105948</TD>
-</TR><TR ALIGN='LEFT'>    <TD>i/o=0.000182</TD>
-    <TD>devstatic=0.097420</TD>
+</TR><TR ALIGN='LEFT'>    <TD>i/o=0.000248</TD>
+    <TD>devstatic=0.097424</TD>
     <TD>vccint_voltage=1.000000</TD>
-    <TD>vccint_total_current=0.022957</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.007681</TD>
-    <TD>vccint_static_current=0.015276</TD>
+    <TD>vccint_total_current=0.024140</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_dynamic_current=0.008861</TD>
+    <TD>vccint_static_current=0.015279</TD>
     <TD>vccaux_voltage=1.800000</TD>
-    <TD>vccaux_total_current=0.076767</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_dynamic_current=0.058603</TD>
+    <TD>vccaux_total_current=0.076770</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_dynamic_current=0.058605</TD>
     <TD>vccaux_static_current=0.018164</TD>
     <TD>vcco33_voltage=3.300000</TD>
-    <TD>vcco33_total_current=0.004033</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_dynamic_current=0.000033</TD>
+    <TD>vcco33_total_current=0.004052</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_dynamic_current=0.000052</TD>
     <TD>vcco33_static_current=0.004000</TD>
     <TD>vcco25_voltage=2.500000</TD>
     <TD>vcco25_total_current=0.000000</TD>
@@ -269,19 +268,19 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>slice_luts_used=846</TD>
+<TR ALIGN='LEFT'>    <TD>slice_luts_used=900</TD>
     <TD>slice_luts_fixed=0</TD>
     <TD>slice_luts_available=63400</TD>
-    <TD>slice_luts_util_percentage=1.33</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=726</TD>
+    <TD>slice_luts_util_percentage=1.42</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=744</TD>
     <TD>lut_as_logic_fixed=0</TD>
     <TD>lut_as_logic_available=63400</TD>
-    <TD>lut_as_logic_util_percentage=1.15</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=120</TD>
+    <TD>lut_as_logic_util_percentage=1.17</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=156</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_available=19000</TD>
-    <TD>lut_as_memory_util_percentage=0.63</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_used=120</TD>
+    <TD>lut_as_memory_util_percentage=0.82</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_used=156</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
@@ -297,57 +296,57 @@
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_available=126800</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
-</TR><TR ALIGN='LEFT'>    <TD>f7_muxes_used=20</TD>
+</TR><TR ALIGN='LEFT'>    <TD>f7_muxes_used=38</TD>
     <TD>f7_muxes_fixed=0</TD>
     <TD>f7_muxes_available=31700</TD>
-    <TD>f7_muxes_util_percentage=0.06</TD>
-</TR><TR ALIGN='LEFT'>    <TD>f8_muxes_used=8</TD>
+    <TD>f7_muxes_util_percentage=0.12</TD>
+</TR><TR ALIGN='LEFT'>    <TD>f8_muxes_used=0</TD>
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_available=15850</TD>
-    <TD>f8_muxes_util_percentage=0.05</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=243</TD>
+    <TD>f8_muxes_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=261</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_available=15850</TD>
-    <TD>slice_util_percentage=1.53</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slicel_used=158</TD>
+    <TD>slice_util_percentage=1.65</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slicel_used=170</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicem_used=85</TD>
+    <TD>slicem_used=91</TD>
     <TD>slicem_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=726</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=744</TD>
     <TD>lut_as_logic_fixed=0</TD>
     <TD>lut_as_logic_available=63400</TD>
-    <TD>lut_as_logic_util_percentage=1.15</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_output_only_used=0</TD>
+    <TD>lut_as_logic_util_percentage=1.17</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_output_only_used=2</TD>
     <TD>using_o5_output_only_fixed=</TD>
-    <TD>using_o6_output_only_used=649</TD>
+    <TD>using_o6_output_only_used=652</TD>
     <TD>using_o6_output_only_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=77</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=90</TD>
     <TD>using_o5_and_o6_fixed=</TD>
-    <TD>lut_as_memory_used=120</TD>
+    <TD>lut_as_memory_used=156</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
-    <TD>lut_as_memory_util_percentage=0.63</TD>
-    <TD>lut_as_distributed_ram_used=120</TD>
+    <TD>lut_as_memory_util_percentage=0.82</TD>
+    <TD>lut_as_distributed_ram_used=156</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>using_o5_output_only_used=0</TD>
     <TD>using_o5_output_only_fixed=</TD>
-    <TD>using_o6_output_only_used=72</TD>
+    <TD>using_o6_output_only_used=104</TD>
     <TD>using_o6_output_only_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=48</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=52</TD>
     <TD>using_o5_and_o6_fixed=</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=847</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=899</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=1.34</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=1.42</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_used=48</TD>
     <TD>fully_used_lut_ff_pairs_fixed=</TD>
     <TD>lut_ff_pairs_with_unused_lut_used=1</TD>
     <TD>lut_ff_pairs_with_unused_lut_fixed=</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_unused_flip_flop_used=798</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_unused_flip_flop_used=850</TD>
     <TD>lut_ff_pairs_with_unused_flip_flop_fixed=</TD>
-    <TD>unique_control_sets_used=8</TD>
+    <TD>unique_control_sets_used=19</TD>
     <TD>minimum_number_of_registers_lost_to_control_set_restriction_used=31(Lost)</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -454,84 +453,82 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>lut6_used=449</TD>
+<TR ALIGN='LEFT'>    <TD>lut6_used=431</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut5_used=220</TD>
+    <TD>lut5_used=236</TD>
     <TD>lut5_functional_category=LUT</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ramd32_used=72</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ramd32_used=80</TD>
     <TD>ramd32_functional_category=Distributed Memory</TD>
-    <TD>rams32_used=60</TD>
-    <TD>rams32_functional_category=Distributed Memory</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fdre_used=57</TD>
-    <TD>fdre_functional_category=Flop &amp; Latch</TD>
-    <TD>lut3_used=52</TD>
-    <TD>lut3_functional_category=LUT</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut4_used=48</TD>
+    <TD>lut4_used=77</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>rams64e_used=36</TD>
-    <TD>rams64e_functional_category=Distributed Memory</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2_used=31</TD>
-    <TD>lut2_functional_category=LUT</TD>
-    <TD>muxf7_used=20</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ramd64e_used=72</TD>
+    <TD>ramd64e_functional_category=Distributed Memory</TD>
+    <TD>fdre_used=57</TD>
+    <TD>fdre_functional_category=Flop &amp; Latch</TD>
+</TR><TR ALIGN='LEFT'>    <TD>rams32_used=56</TD>
+    <TD>rams32_functional_category=Distributed Memory</TD>
+    <TD>lut3_used=54</TD>
+    <TD>lut3_functional_category=LUT</TD>
+</TR><TR ALIGN='LEFT'>    <TD>muxf7_used=38</TD>
     <TD>muxf7_functional_category=MuxFx</TD>
+    <TD>lut2_used=33</TD>
+    <TD>lut2_functional_category=LUT</TD>
 </TR><TR ALIGN='LEFT'>    <TD>carry4_used=19</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
     <TD>obuf_used=14</TD>
     <TD>obuf_functional_category=IO</TD>
-</TR><TR ALIGN='LEFT'>    <TD>muxf8_used=8</TD>
-    <TD>muxf8_functional_category=MuxFx</TD>
-    <TD>lut1_used=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut1_used=3</TD>
     <TD>lut1_functional_category=LUT</TD>
-</TR><TR ALIGN='LEFT'>    <TD>bufg_used=2</TD>
+    <TD>bufg_used=2</TD>
     <TD>bufg_functional_category=Clock</TD>
-    <TD>mmcme2_adv_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>mmcme2_adv_used=1</TD>
     <TD>mmcme2_adv_functional_category=Clock</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ibuf_used=1</TD>
+    <TD>ibuf_used=1</TD>
     <TD>ibuf_functional_category=IO</TD>
-    <TD>bufgctrl_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>bufgctrl_used=1</TD>
     <TD>bufgctrl_functional_category=Clock</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>io_standard</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ppds_25=0</TD>
-    <TD>sstl135=0</TD>
+<TR ALIGN='LEFT'>    <TD>sstl135=0</TD>
     <TD>sstl15_r=0</TD>
     <TD>sstl15=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>sstl18_ii=0</TD>
-    <TD>sstl18_i=0</TD>
+    <TD>sstl18_ii=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>sstl18_i=0</TD>
     <TD>hstl_ii=0</TD>
-    <TD>diff_hsul_12=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>hsul_12=0</TD>
+    <TD>hsul_12=0</TD>
     <TD>diff_hstl_i_18=0</TD>
-    <TD>lvcmos33=1</TD>
-    <TD>hstl_i=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lvttl=0</TD>
-    <TD>lvcmos15=0</TD>
-    <TD>diff_hstl_i=0</TD>
-    <TD>lvcmos25=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lvds_25=0</TD>
-    <TD>hstl_ii_18=0</TD>
-    <TD>lvcmos18=0</TD>
-    <TD>lvcmos12=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>diff_hstl_ii=0</TD>
-    <TD>sstl135_r=0</TD>
-    <TD>pci33_3=0</TD>
-    <TD>diff_hstl_ii_18=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>diff_sstl18_i=0</TD>
-    <TD>diff_sstl18_ii=0</TD>
-    <TD>diff_sstl15=0</TD>
-    <TD>diff_sstl15_r=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>diff_sstl135=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>hstl_i=0</TD>
     <TD>diff_sstl135_r=0</TD>
     <TD>mobile_ddr=0</TD>
-    <TD>diff_mobile_ddr=0</TD>
+    <TD>diff_hstl_i=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>hstl_i_18=0</TD>
-    <TD>blvds_25=0</TD>
     <TD>rsds_25=0</TD>
-    <TD>tmds_33=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>mini_lvds_25=0</TD>
+    <TD>lvcmos25=0</TD>
+    <TD>hstl_ii_18=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>tmds_33=0</TD>
+    <TD>lvcmos18=0</TD>
+    <TD>lvcmos15=0</TD>
+    <TD>mini_lvds_25=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ppds_25=0</TD>
+    <TD>lvcmos12=0</TD>
+    <TD>diff_hstl_ii=0</TD>
+    <TD>sstl135_r=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_hstl_ii_18=0</TD>
+    <TD>diff_sstl18_i=0</TD>
+    <TD>diff_sstl18_ii=0</TD>
+    <TD>diff_sstl15=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>diff_sstl15_r=0</TD>
+    <TD>diff_sstl135=0</TD>
+    <TD>diff_hsul_12=0</TD>
+    <TD>lvttl=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pci33_3=0</TD>
+    <TD>diff_mobile_ddr=0</TD>
+    <TD>blvds_25=0</TD>
+    <TD>lvcmos33=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lvds_25=0</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -540,20 +537,20 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>lut=912</TD>
+<TR ALIGN='LEFT'>    <TD>lut=979</TD>
     <TD>ff=57</TD>
     <TD>bram36=0</TD>
     <TD>bram18=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>ctrls=8</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ctrls=19</TD>
     <TD>dsp=0</TD>
     <TD>iob=15</TD>
     <TD>bufg=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>global_clocks=3</TD>
     <TD>pll=0</TD>
     <TD>bufr=0</TD>
-    <TD>nets=1176</TD>
-</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1106</TD>
-    <TD>pins=7853</TD>
+    <TD>nets=1256</TD>
+</TR><TR ALIGN='LEFT'>    <TD>movable_instances=1186</TD>
+    <TD>pins=8961</TD>
     <TD>bogomips=3591</TD>
     <TD>high_fanout_nets=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
@@ -561,9 +558,9 @@
     <TD>router_timing_driven=1</TD>
     <TD>timing_constraints_exist=1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>congestion_level=0</TD>
-    <TD>estimated_expansions=803760</TD>
-    <TD>actual_expansions=1303479</TD>
-    <TD>router_runtime=38.800000</TD>
+    <TD>estimated_expansions=1167900</TD>
+    <TD>actual_expansions=1767153</TD>
+    <TD>router_runtime=48.130000</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -600,9 +597,9 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:48s</TD>
-    <TD>memory_peak=1349.523MB</TD>
-    <TD>memory_gain=436.754MB</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:44s</TD>
+    <TD>memory_peak=1373.535MB</TD>
+    <TD>memory_gain=460.762MB</TD>
     <TD>hls_ip=0</TD>
 </TR>   </TABLE>
    </TD></TR>
