--- a/Lab10.sim/sim_3/behav/xsim.dir/mips_test_sqr_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/Lab10.sim/sim_3/behav/xsim.dir/mips_test_sqr_behav/webtalk/usage_statistics_ext_xsim.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'><H3>XSIM Usage Report</H3><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
-<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Nov 13 13:00:27 2015</TD>
+<TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Nov 13 14:33:17 2015</TD>
   <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2015.1 (64-bit)</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1215546</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>LIN64</TD>
@@ -16,7 +16,7 @@
   <TD BGCOLOR='#DBE5F1'><B>target_speed</B></TD><TD>not_applicable</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>a69d84be-9db2-43e9-b605-2619a5723e2b</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>602e4366ef7c4cb2b915373ada5c43b8</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
 </TR> </TABLE><BR>
  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>user_environment</B></TD></TR>
@@ -35,28 +35,18 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>systemverilog=true</TD>
-    <TD>file_counter=16</TD>
-    <TD>command=xelab</TD>
-    <TD>vhdl2008=false</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
-    <TD>sdfmodeling=false</TD>
-    <TD>hwcosim=false</TD>
-    <TD>dpi_used=false</TD>
-</TR><TR ALIGN='LEFT'>    <TD>debug=typical</TD>
+<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+    <TD>runall=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>simulation_image_code=203 KB</TD>
-    <TD>simulation_image_data=19 KB</TD>
-    <TD>total_nets=379</TD>
-    <TD>total_processes=356</TD>
-</TR><TR ALIGN='LEFT'>    <TD>total_instances=48</TD>
-    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
-    <TD>compiler_time=1.98_sec</TD>
-    <TD>compiler_memory=429228_KB</TD>
+<TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+    <TD>runtime=50 ns</TD>
+    <TD>iteration=0</TD>
+    <TD>simulation_time=0.09_sec</TD>
+</TR><TR ALIGN='LEFT'>    <TD>simulation_memory=187012_KB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
